add epictrading logo color text

--- a/Epic_Trading/src/app/auth/register/register.component.scss
+++ b/Epic_Trading/src/app/auth/register/register.component.scss
@@ -1,3 +1,11 @@
+.bannercontrolpaneltext{
+  background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+
 .form-box {
   max-width: 300px;
   background: #f1f7fe;
