--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -532,7 +532,7 @@
                                               </td>
                                             </tr>
                                           </ng-container>
-                                            <button class="btn" (click)="showAllPF = !showAllPF">
+                                            <button class="btn bannercontrolpanel mt-2"  (click)="showAllPF = !showAllPF">
                                               {{ showAllPF ? 'Show less' : 'Show all' }}
                                             </button>
                                           </tbody>
@@ -592,7 +592,7 @@
                                           <td></td>
                                         </tr>
                                       </ng-container>
-                                      <button class="btn" (click)="showAll = !showAll">
+                                      <button class="btn bannercontrolpanel mt-2"  (click)="showAll = !showAll">
                                         {{ showAll ? 'Show less' : 'Show all'  }}
                                       </button>
                                       </tbody>
