--- a/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
+++ b/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
@@ -313,7 +313,7 @@
                                               <td>{{ historicalPrice.price | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
                                             </tr>
                                           </ng-container>
-                                          <button class="btn" (click)="showAllHistoricalPrices = !showAllHistoricalPrices">
+                                          <button class="btn bannercontrolpanel mt-2" (click)="showAllHistoricalPrices = !showAllHistoricalPrices">
                                             {{ showAllHistoricalPrices ? 'Show less' : 'Show more' }}
                                           </button>
 
