--- a/Epic_Trading/src/app/auth/register/register.component.html
+++ b/Epic_Trading/src/app/auth/register/register.component.html
@@ -45,7 +45,7 @@
 <div class="form-box mx-auto  ">
   <form class="form ">
     <div class=" title container-fluid text-center ">
-      <a class="navbar-brand" href="/controlPanel"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
+      <a class="navbar-brand bannercontrolpaneltext" href="#"><img  class="pb-1 mx-1" src="https://img.icons8.com/material-outlined/24/combo-chart.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
       </div>
       <span class="title">Sign up</span>
       <span class="subtitle">Create a free account with your email.</span>
