add confirm paypal

--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
             <a class="nav-link text-white" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/marketAnalyst" routerLinkActive="active">DEVO PENSARCI</a>
+            <a class="nav-link text-white" routerLink="/paypal" routerLinkActive="active">Deposit</a>
           </li>
         </ul>
         </div>
@@ -71,7 +71,7 @@
        </div>
     </div>
   </nav>
-  <hr class="m-0 p-0" style="color: grey;">
+  <!-- <hr class="m-0 p-0" style="color: grey;"> -->
 </header>
 
 
