--- a/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
+++ b/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
@@ -1,64 +1,58 @@
-<!--
-  Inspired by Vladyslav Tyzun / Awesomed
-  https://dribbble.com/shots/2738907-PayPal-Email-Receipt
--->
 
-<div class="bannercontrolpanel">
-    <div class="paypal">
 
-      <div class="paypal__header">
-        <div class="paypal__logo-wrapper">
-          <img src="https://i.ibb.co/DrvmW5y/paypal.png" alt="Paypal" class="paypal__logo">
-        </div>
 
-        <div class="paypal__header-info">
-          <span class="paypal__date">25.04.2016</span>
-          <span class="paypal__ref">0f-113</span>
-        </div>
-      </div>
-
-      <div class="paypal__subheader-wrapper">
-        <div class="paypal__subheader">
-          <h1 class="paypal__username text-black">VladysLav, Hi</h1>
-          <span class="paypal__help-text">you've purchased three (3) items in our store:</span>
-        </div>
-      </div>
-
-      <div class="paypal__cart">
-        <h2 class="paypal__cart-title text-black">Cart:</h2>
-
-        <ul class="paypal__cart-list">
-          <li class="paypal__cart-item">
-            <span class="paypal__index">1</span>
-            <span class="paypal__item-name">t-Shirt Lacoste</span>
-            <span class="paypal__item-price text-black">$48.00</span>
-          </li>
-
-          <li class="paypal__cart-item">
-            <span class="paypal__index">2</span>
-            <span class="paypal__item-name">Snickers Nike</span>
-            <span class="paypal__item-price text-black">$125.00</span>
-          </li>
-
-          <li class="paypal__cart-item">
-            <span class="paypal__index">3</span>
-            <span class="paypal__item-name">All Stars</span>
-            <span class="paypal__item-price text-black">$95.00</span>
-          </li>
-
-          <li class="paypal__cart-item">
-            <span class="paypal__cart-total text-black">Total</span>
-            <span class="paypal__item-price text-black">$268.00</span>
-          </li>
-        </ul>
-      </div>
-
-      <div class="paypal__footer">
-        <img src="https://i.ibb.co/c8CQvBq/barcode.png" alt="Paypal Barcode" class="paypal__barcode">
-      </div>
-    </div>
+<!-- test 2  -->
 
 
 
 
-  </div>
+	<div class="container">
+		<div class="left">
+			<div class="info-box">
+				<div class="receipt">
+					Receipt for <br><span>Dribbble</span>
+				</div>
+				<div class="entry">
+					<i class="icon-wallet" aria-hidden="true"></i>
+					<p>Amount:<br><span>$20.00 USD</span></p>
+				</div>
+				<div class="entry">
+					<i class="icon-calendar" aria-hidden="true"></i>
+					<p>Date:<br><span>Nov 5</span></p>
+				</div>
+				<div class="entry">
+					<i class="icon-star" aria-hidden="true"></i>
+					<p>Issuer:<br><span>Dribbble</span></p>
+				</div>
+				<div class="entry">
+					<i class="icon-notebook" aria-hidden="true"></i>
+					<p>Confirmation Nr:<br><span>0YX123580219G</span></p>
+				</div>
+			</div>
+		</div>
+		<div class="right">
+			<div class="content">
+				<div class="header">
+					<img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-200px.png">
+					<h4>Oct 18, 2015   08:30:57   PDT</h4>
+				</div>
+				<div class="main">
+					<h3>Dribbble Pro Account (1 year)</h3>
+					<h5>Total: $20.00 USD</h5>
+				</div>
+				<div class="message">
+					<p>Hello Ennio,<br>You sent a payment of $20.00 USD to Dribbble (<a href="mailto:paypal@dribbble.com">paypal@dribbble.com</a>)</p>
+					<h6>It may take a few moments for this<br>transaction to appear in your account.</h6>
+				</div>
+				<div class="footer">
+					<a href="#">www.paypal.com/help</a>
+					<h6>Invoice ID: 108165</h6>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
