--- a/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.scss
+++ b/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.scss
@@ -1,14 +1,4 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
 
-  background-color: #FF84A1;
-  font-family: "Source Sans Pro", "Helvetica", sans-serif;
-  letter-spacing: 1.5px;
-}
 
 .bannercontrolpanel{
   background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
@@ -17,295 +7,177 @@ body {
 
 
 
-.inspired-by {
-  display: block;
-  position: relative;
-  margin-bottom: 15px;
-  text-align: center;
-  color: #fff;
-  font-size: 14px;
+body {
+	background-color: #f6f9f8;
+	font-family: 'Roboto', sans-serif;
 }
 
-.paypal {
-  position: relative;
-  left: 50%;
-  display: inline-block;
-  /*min-width: 500px;*/
-  max-width: 100%;
-  width: auto;
-  margin: 50px auto 25px;
-  padding: 20px 0;
-  clear: both;
-
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  transform: translateX(-50%);
+a {
+	color: #0e7aea;
+	text-decoration: none;
 }
 
-.paypal__header {
-  display: flex;
-  -ms-align-items: flex-start;
-  align-items: flex-start;
-
-  padding: 30px 30px 45px;
-  background: #fff;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+h6 {
+	color: #9aa3ab;
+	font-weight: 300;
+	line-height: 15px;
 }
 
-.paypal__logo-wrapper {
-  flex: 1 0 40%;
+h5 {
+	color: #99a1aa;
+	font-weight: 300;
 }
 
-.paypal__logo {
-  display: block;
-  width: 50px;
-  height: auto;
-  margin-left: 15px;
+h4 {
+	font-weight: 300;
+	font-size: 13px;
+	color: #97a2ad
 }
 
-.paypal__header-info {
-  flex: 1 0 50%;
+h3 {
+	color: #58636a;
+	font-weight: 500;
 }
 
-.paypal__date,
-.paypal__ref {
-  display: block;
-  font-size: 19px;
-  color: #aaa;
-  font-weight: 300;
+.container {
+	width: 50%;
+	height: 40%;
+	min-width: 636px;
+	min-height: 456px;
+	margin: auto;
+	margin-top: 10%;
+	overflow: hidden;
+	border-radius: 5px 5px 5px 5px;
+	-webkit-box-shadow: 0px 5px 21px 0px rgba(128,128,128,0.2);
+	-moz-box-shadow: 0px 5px 21px 0px rgba(128,128,128,0.2);
+	box-shadow: 0px 5px 21px 0px rgba(128,128,128,0.2);
 }
 
-.paypal__date {
-  margin-bottom: 5px;
+.left {
+	background-color: #1882ef;
+	width: 39%;
+	height: 457px;
+	border-radius: 5px 0 0 5px;
+	float: left;
+	color: #ffffff;
 }
 
-.paypal__subheader-wrapper {
-  background: #fff;
-  padding-bottom: 20px;
+.info-box {
+	margin-top: 35px;
+	margin-left: 35px;
+	margin-right: 35px;
 }
 
-.paypal__subheader {
-  padding: 0 45px 0 40px;
-  border-left: 5px solid #029de0;
+.receipt {
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 26px;
+	padding-top: 10px;
+  padding-bottom: 15px;
+	border-bottom: 1px solid #3895f4;
+	height: 15%;
 }
 
-.paypal__username {
-  margin: 0 0 10px 0;
-  font-size: 22px;
-  font-weight: 600;
+.receipt > span {
+	font-weight: 500;
+	font-size: 21px;
 }
 
-.paypal__help-text {
-  color: #aaa;
-  font-weight: 300;
+.entry {
+	border-bottom: 1px solid #3895f4;
+	height: 15%;
+	overflow: hidden;
+	padding-top: 15px;
 }
 
-.paypal__cart {
-  display: block;
-  padding: 25px 30px 45px;
+.entry > p {
+	font-weight: 300;
+	font-size: 13px;
+	line-height: 26px;
+	margin-top: 0px !important;
+	float: left;
 }
 
-.paypal__cart-title {
-  display: block;
-  margin-top: 0;
-  margin-bottom: 25px;
-  text-align: center;
+.entry > i {
+	margin-top: 4px;
+	margin-right: 13px;
+	float: left;
+	color: #b4d8fc;
 }
 
-.paypal__cart-list {
-  margin: 0;
-  padding: 0 15px;
-  list-style: none;
+span {
+	font-weight: 500;
+	font-size: 16px;
 }
 
-.paypal__cart-item {
-  display: block;
-  padding-top: 20px;
-  margin-bottom: 20px;
-  border-top: 2px dashed #aaa;
-
-  font-size: 18px;
+.entry:last-child {
+	border-bottom: none;
 }
 
-.paypal__cart-item:first-child {
-  border-top: 0;
+.right {
+	background-color: #fefefe;
+	width: 61%;
+	height: 100%;
+	float: left;
+	border-radius: 0 5px 5px 0;
 }
 
-.paypal__cart-item:last-child {
-  margin-bottom: 0;
-  border-top: 2px solid #FFE155;
+.content {
+	margin-top: 50px;
+	margin-left: 40px;
+	margin-right: 40px;
 }
 
-.paypal__index {
-  padding-right: 15px;
-  color: #aaa;
-  font-weight: 300;
+.header {
+	overflow: hidden;
+	border-bottom: 1px solid #d7e2e7;
+	height: 50px;
 }
 
-.paypal__item-name {
-  color: #aaa;
-  font-weight: 300;
+.header > img {
+	width: 100px;
+	float: left;
 }
 
-.paypal__item-price {
-  float: right;
-  letter-spacing: 1px;
+.header > h4 {
+	text-align: right;
+	margin-top: 10px;
 }
 
-.paypal__cart-total {
-  font-size: 20px;
-  text-transform: uppercase;
+.main {
+	margin-top: 35px;
 }
 
-.paypal__footer {
-  position: relative;
-  padding: 30px 20px;
-  border-top: 2px dashed #FF84A1;
-
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+.message {
+	margin-top: 40px;
 }
 
-.paypal__footer::before,
-.paypal__footer::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  border: 4px solid transparent;
-
-  -webkit-transform: translateY(calc(-50% - 1px));
-  -ms-transform: translateY(calc(-50% - 1px));
-  -o-transform: translateY(calc(-50% - 1px));
-  transform: translateY(calc(-50% - 1px));
+.message > p {
+	font-weight: 300;
+	font-size: 15px;
+	color: #7a838d;
+	line-height: 30px;
 }
 
-.paypal__footer::before {
-  left: 0;
-  border-left: 7px solid #ff85a1;
+.message > h6 {
+	margin-top: 10px;
 }
 
-.paypal__footer::after {
-  right: 0;
-  border-right: 7px solid #ff85a1;
+.footer {
+	overflow: hidden;
+	border-top: 1px solid #d7e2e7;
+	margin-top: 40px;
+	padding-top: 30px;
 }
 
-.paypal__barcode {
-  display: block;
-  margin: 0 auto;
-  max-width: 300px;
-  height: auto;
+.footer > a {
+	font-size: 13px;
+	font-weight: 500;
+	float: left;
 }
 
-/**
- * Paypal Animations
- */
-
-@keyframes show-paypal {
- 0% {
-   opacity: 0;
-   transform: scale(0) translateX(-50%);
- }
-
- 85% {
-   opacity: 0;
- }
-
- 100% {
-   opacity: 1;
-   transform: scale(1) translateX(-50%);
- }
-}
-
-.paypal {
-  transform-origin: top left;
-  animation: show-paypal 1s ease-out forwards;
-}
-
-@keyframes show-subheader {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-
-  65% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-.paypal__subheader {
-  opacity: 0;
-  animation: show-subheader 1s 0.5s ease-out forwards;
-}
-
-@keyframes slide-down {
-  to {
-    transform: perspective(100px) rotateX(0) translate3d(0, 0, 0);
-  }
-}
-
-.paypal__cart {
-  background-color: #fff;
-
-  transform-style: preserve-3d;
-  transform-origin: top center;
-  transform: perspective(100px) rotateX(-90deg) translate3d(0, 0, 0);
-
-  animation: slide-down 0.4s 2s ease-out forwards;
-}
-
-.paypal__footer {
-  background-color: #fff;
-
-  transform-style: preserve-3d;
-  transform-origin: top center;
-  transform: perspective(100px) rotateX(-90deg) translate3d(0, 0, 0);
-
-  animation: slide-down 0.4s 2.5s ease-out forwards;
-}
-
-@keyframes show-cart-title {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.paypal__cart-title {
-  opacity: 0;
-  transform: translateY(10px);
-
-  animation: show-cart-title 0.5s 2.25s ease-in forwards;
-}
-
-@keyframes show-cart-item {
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-.paypal__cart-item {
-  opacity: 0;
-  transform: translateX(-30px);
-
-  animation: show-cart-item 0.3s 2.75s ease-in forwards;
-}
-
-.paypal__cart-item:nth-child(2) {
-  animation-delay: 2.9s;
-}
-
-.paypal__cart-item:nth-child(3) {
-  animation-delay: 3.05s;
-}
-
-.paypal__cart-item:nth-child(4) {
-  animation-delay: 3.2s;
+.footer > h6 {
+	color: #7a838d;
+	text-align: right;
+	margin-top: 0px !important;
 }
