--- a/Epic_Trading/src/app/components/paypal/paypal.component.html
+++ b/Epic_Trading/src/app/components/paypal/paypal.component.html
@@ -1,4 +1,4 @@
-<div class="paypal-container">
+<!-- <div class="paypal-container">
 
   <input
   type="number"
@@ -14,7 +14,31 @@
   <div class="info">Please do not refresh the browser while the transaction is processing</div>
   <div #paymentRef></div>
   <button class="back" (click)="cancel()">Cancel</button>
-</div>
+</div> -->
 
 
 
+<div class="bannercontrolpanel ">
+  <div class="form-box mx-auto ">
+
+    <form class="form">
+      <div class=" title container-fluid text-center ">
+        <img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-200px.png">
+        <a class="navbar-brand bannercontrolpaneltext" href="#"><img  class="pb-1 mx-1" src="https://img.icons8.com/material-outlined/24/combo-chart.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
+        </div>
+        <!-- <span class="title">Log in</span> -->
+        <span class="subtitle">Recharge your account with Pp.</span>
+        <div class="form-container">
+
+          <input type="number" class="input" placeholder="Insert Amount (USD DOLLAR)"  [(ngModel)]="amount"
+          name="amount"
+          id="amount" required >
+          <div class="amount">Total amount to pay: ${{amount}}</div>
+        </div>
+        <div #paymentRef></div>
+    </form>
+    <div class="form-section">
+      <p>Change idea? <a routerLink="/register" (click)="cancel()" routerLinkActive="active">Back</a> </p>
+    </div>
+    </div>
+  </div>
