--- a/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
+++ b/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
@@ -10,7 +10,7 @@
 		<div class="left">
 			<div class="info-box">
 				<div class="receipt">
-					Receipt for <br><span>Dribbble</span>
+					Receipt for <br><span>EpicTrading LTD.</span>
 				</div>
 				<div class="entry">
 					<i class="icon-wallet" aria-hidden="true"></i>
@@ -37,11 +37,11 @@
 					<h4>Oct 18, 2015   08:30:57   PDT</h4>
 				</div>
 				<div class="main">
-					<h3>Dribbble Pro Account (1 year)</h3>
+					<h3>Deposit on wallet</h3>
 					<h5>Total: $20.00 USD</h5>
 				</div>
 				<div class="message">
-					<p>Hello Ennio,<br>You sent a payment of $20.00 USD to Dribbble (<a href="mailto:paypal@dribbble.com">paypal@dribbble.com</a>)</p>
+					<p>Hello Ennio,<br>You sent a payment of $20.00 USD to EpicTrading (<a href="/controlPanel">paypal@epictrading.com</a>)</p>
 					<h6>It may take a few moments for this<br>transaction to appear in your account.</h6>
 				</div>
 				<div class="footer">
