--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -30,7 +30,7 @@
 
   <div id="navbar-avatar" class="col-6 dropdown position-relative">
     <a class=" dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-      <img class="rounded-circle mx-2" src="https://cdn3.vectorstock.com/i/1000x1000/30/97/flat-business-man-user-profile-avatar-icon-vector-4333097.jpg" alt="" width="60px" height="60px" />
+      <img class="rounded-circle  mx-2 "  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJxA5cTf-5dh5Eusm0puHbvAhOrCRPtckzjA&usqp=CAU" alt="" width="60px" height="60px" />
       <span id="nav-avatar"
         class="position-absolute translate-middle badge border border-light rounded-circle bg-success p-2"><span
           class="visually-hidden">unread messages</span></span>
