--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -260,29 +260,75 @@
   </div> -->
 
 
+
+<!-- MODALE WITHDRAW -->
+<div id="modalWithdraw" class="modal fade modal-lg  ">
+  <div class="modal-dialog ">
+    <div class="modal-content ">
+      <div class="modal-header">
+        <h5 class="modal-title bannercontrolpaneltext" id="modal-title-add">
+         WITHDRAW
+        </h5>
+      </div>
+      <div class="modal-body"  *ngIf="currentUserInfo">
+        <p id="add-modal " class="bannercontrolpaneltext">SELECT AMOUNT</p>
+        <div class="col-md-12">
+          <form  class="d-flex">
+            <div class="form-group">
+              <label for="amount">Amount $</label>
+              <input type="number" class="form-control" id="amount" name="amount" [(ngModel)]="amount">
+            </div>
+          </form>
+          <div>
+           <button  (click)="createTransactionWITHDRAW(amount); closeWithdrawModal()" class=" btn-s bannercontrolpanel rounded-2 ml-4 btn-primary">Withdraw</button>
+           <button (click)="closeWithdrawModal()"  class="btn-s btn-danger rounded-2 px-2 ml-2" >Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- //MODALI -->
-  <div id="modalOk" class="modal fade modal-lg  ">
+  <!-- <div id="modalOk" class="modal fade modal-lg  ">
     <div class="modal-dialog ">
       <div class="modal-content ">
         <div class="modal-header">
           <h5 class="modal-title bannercontrolpaneltext" id="modal-title-add">
            USER  MODIFIED
-          </h5>
+          </h5> -->
           <!-- <h5 class="modal-title" id="modal-title-mod">
             Prodotto modificato correttamente
           </h5>
           <h5 class="modal-title" id="modal-title-del">
             Prodotto eliminato correttamente
           </h5> -->
-        </div>
+        <!-- </div>
         <div class="modal-body">
-          <p id="add-modal " class="bannercontrolpaneltext">Successful user modify</p>
+          <p id="add-modal " class="bannercontrolpaneltext">Successful user modify</p> -->
           <!-- <p id="mod-modal">Il prodotto è stato modificato.</p>
           <p id="del-modal">Il prodotto è stato cancellato.</p> -->
-        </div>
+        <!-- </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div id="modalError" class="modal fade modal-lg text-danger">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -418,7 +464,7 @@
 
                                         </div>
                                       </div>
-                                      <button (click)="createTransactionDEPOSIT()" class=" btn-s bannercontrolpanel rounded-2 ml-4 btn-primary">Deposit</button>   <button class="btn-s btn-danger rounded-2 px-2 ml-2">Withdraw</button>
+                                      <button (click)="createTransactionDEPOSIT()" class=" btn-s bannercontrolpanel rounded-2 ml-4 btn-primary">Deposit</button>   <button (click)="openWithdrawModal()" class="btn-s btn-danger rounded-2 px-2 ml-2" >Withdraw</button>
                                   </div>
 
                                       <div class="col-auto">
