--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -559,6 +559,8 @@
                                               <th scope="col">Current Price</th>
                                               <th scope="col">% variation</th>
                                               <th scope="col">Total Price</th>
+                                              <th scope="col">Action</th>
+                                              <th scope="col"></th>
                                             </tr>
                                           </thead>
                                           <tbody>
@@ -575,12 +577,12 @@
                                                 <button (click)="viewDetails(portfolioStock.marketData.id)" class="btn-xs bannercontrolpanel  px-4 rounded-2 py-2">Details</button>
                                               </td>
                                               <td >
-                                                <button (click)="createTransactionSELL(portfolioStock.marketData.price, portfolioStock.marketData.id, portfolioStock.quantity, portfolioStock.id)" class="btn btn-danger px-1 rounded-5 py-2">SELL</button>
+                                                <button (click)="createTransactionSELL(portfolioStock.marketData.price, portfolioStock.marketData.id, portfolioStock.quantity, portfolioStock.id)" class="btn btn-danger px-4 rounded-2 py-2">SELL</button>
 
                                               </td>
                                             </tr>
                                           </ng-container>
-                                            <button class="btn bannercontrolpanel mt-2"  (click)="showAllPF = !showAllPF">
+                                            <button *ngIf="userPortfolioStocks.length >6" class="btn bannercontrolpanel mt-2"  (click)="showAllPF = !showAllPF">
                                               {{ showAllPF ? 'Show less' : 'Show all' }}
                                             </button>
                                           </tbody>
@@ -623,7 +625,7 @@
                                         <tr>
                                           <th scope="col">Transaction</th>
                                           <th scope="col">Quantity</th>
-                                          <th scope="col">Price</th>
+                                          <th scope="col">Amount</th>
                                           <th scope="col">Symbol</th>
                                         </tr>
                                       </thead>
@@ -640,7 +642,7 @@
                                           <td></td>
                                         </tr>
                                       </ng-container>
-                                      <button class="btn bannercontrolpanel mt-2"  (click)="showAll = !showAll">
+                                      <button *ngIf="transactions.length > 7" class="btn bannercontrolpanel mt-2"  (click)="showAll = !showAll">
                                         {{ showAll ? 'Show less' : 'Show all'  }}
                                       </button>
                                       </tbody>
@@ -836,7 +838,8 @@
           <footer class="sticky-footer bg-white">
               <div class="container my-auto">
                   <div class="copyright text-center my-auto">
-                      <span>Copyright &copy; Your Website 2021</span>
+                      <span>Copyright &copy; Luca Quaglino 2023</span>
+
                   </div>
               </div>
           </footer>
@@ -849,9 +852,7 @@
   <!-- End of Page Wrapper -->
 
   <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up"></i>
-  </a>
+
 
   <!-- Logout Modal-->
   <!-- <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
