--- a/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
+++ b/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
@@ -480,12 +480,13 @@
 
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
-                    </div>
-                </div>
-            </footer>
+              <div class="container my-auto">
+                  <div class="copyright text-center my-auto">
+                      <span>Copyright &copy; Luca Quaglino 2023</span>
+
+                  </div>
+              </div>
+          </footer>
             <!-- End of Footer -->
 
         </div>
