--- a/Epic_Trading/src/app/components/market/market.component.html
+++ b/Epic_Trading/src/app/components/market/market.component.html
@@ -204,6 +204,14 @@
 </div>
 </div>
 </div>
+<footer class="sticky-footer bg-white">
+  <div class="container my-auto">
+      <div class="copyright text-center my-auto">
+          <span>Copyright &copy; Luca Quaglino 2023</span>
+
+      </div>
+  </div>
+</footer>
 </body>
 
 
