--- a/Epic_Trading/src/app/components/paypal/paypal.component.html
+++ b/Epic_Trading/src/app/components/paypal/paypal.component.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand bannercontrolpaneltext" href="#"><img  class="pb-1 mx-1" src="https://img.icons8.com/material-outlined/24/combo-chart.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
         </div>
         <!-- <span class="title">Log in</span> -->
-        <span class="subtitle">Recharge your account with Pp.</span>
+        <span class="subtitle">Recharge your funds with Pp.</span>
         <div class="form-container">
 
           <input type="number" class="input" placeholder="Insert Amount (USD DOLLAR)"  [(ngModel)]="amount"
