fix mt lading page

--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -159,40 +159,6 @@ of Simple CSS Waves-->
 
 
 
-
-
-<!-- testo che ruota infinito -->
-<!-- <div class="marquee-container mb-5 py-4 bg-light" style="border-top: 1px solid rgb(233, 229, 229); border-bottom: 1px solid rgb(221, 214, 214);" >
-  <div class="marquee-content" >
-
-
-
-    <span *ngFor="let marketData of marketData">
-        <span>
-          {{ marketData.symbol }}&nbsp;&nbsp;</span>
-        <span>        </span>        <span>       </span><span> </span><span> </span><span> </span><span> </span><span> </span><span> </span>
-        <span [style.color]="marketData.color">
-          {{ marketData.price | number:'1.2-2' }}&nbsp;&nbsp;</span>
-        <span> </span>
-
-        <span> </span>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <span> </span>
-        <span> </span>
-      </span>
-
-
-
-  </div>
-</div> -->
-
-
-
-
-
-
-
-
 <!-- Features Section -->
 <section id="features" class="py-5">
   <div class="container text-center">
@@ -242,7 +208,7 @@ of Simple CSS Waves-->
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 mt-5">
         <h2 class="bannercontrolpaneltext">Diverse Market Offerings:</h2>
         <p >
           Explore a diverse range of financial instruments, from stocks and cryptocurrencies to forex and commodities. With EpicTrading, you have access to a wide spectrum of markets, allowing you to diversify your portfolio and optimize your trading strategy.
@@ -275,7 +241,7 @@ of Simple CSS Waves-->
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-5">
         <div class="card h-100">
           <img src="../../../assets/stroge.svg" class="card-img-top mx-auto mt-3"  alt="Immagine 2" style="max-width: 110px; max-height: 110px">
           <div class="card-body">
@@ -285,7 +251,7 @@ of Simple CSS Waves-->
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-5">
         <div class="card h-100">
           <img src="../../../assets/backup.svg" class="card-img-top mx-auto mt-3"  alt="Immagine 3" style="max-width: 110px; max-height: 110px">
           <div class="card-body">
@@ -331,7 +297,7 @@ of Simple CSS Waves-->
   <div class="container text-center">
     <h2 class="mb-5  bannercontrolpaneltext">Get started in a few steps</h2>
     <div class="row justify-content-center">
-      <div class="col-md-4">
+      <div class="col-md-4 ">
         <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
           <img src="../../../assets/user.svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
@@ -339,7 +305,7 @@ of Simple CSS Waves-->
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-5">
         <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
           <img src="../../../assets/bank.svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
@@ -347,7 +313,7 @@ of Simple CSS Waves-->
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mt-5">
         <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
           <img src="../../../assets/trade .svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
