add logic confirmpaypal

--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -228,7 +228,7 @@ of Simple CSS Waves-->
     <h2 class="mb-5 bannercontrolpaneltext">Here are a few reasons why <br>
       you should choose EpicTrading</h2>
     <div class="row justify-content-center">
-      <div class="col-md-4">
+      <div class="col-md-4 mt-5">
         <div class="card h-100">
           <img src="../../../assets/managment.svg" class="card-img-top mx-auto mt-3  "  alt="Immagine 1" style="max-width: 110px; max-height: 110px ">
           <div class="card-body">
@@ -297,7 +297,7 @@ of Simple CSS Waves-->
   <div class="container text-center">
     <h2 class="mb-5  bannercontrolpaneltext">Get started in a few steps</h2>
     <div class="row justify-content-center">
-      <div class="col-md-4 ">
+      <div class="col-md-4 mt-5">
         <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
           <img src="../../../assets/user.svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
