--- a/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
+++ b/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
@@ -6,7 +6,7 @@
 
 
 
-	<div class="container">
+	<div class="container"  *ngFor="let price of details.purchase_units">
 		<div class="left">
 			<div class="info-box">
 				<div class="receipt">
@@ -14,19 +14,19 @@
 				</div>
 				<div class="entry">
 					<i class="icon-wallet" aria-hidden="true"></i>
-					<p>Amount:<br><span>$20.00 USD</span></p>
+					<p>Amount:<br><span>${{price.amount.value}} USD</span></p>
 				</div>
 				<div class="entry">
 					<i class="icon-calendar" aria-hidden="true"></i>
-					<p>Date:<br><span>Nov 5</span></p>
+					<p>Date:<br><span>{{ details.update_time | date:'dd MMMM' }}</span></p>
 				</div>
 				<div class="entry">
 					<i class="icon-star" aria-hidden="true"></i>
-					<p>Issuer:<br><span>Dribbble</span></p>
+					<p>Issuer:<br><span>EpicTrading LTD</span></p>
 				</div>
 				<div class="entry">
 					<i class="icon-notebook" aria-hidden="true"></i>
-					<p>Confirmation Nr:<br><span>0YX123580219G</span></p>
+					<p>Confirmation Nr:<br><span>{{details.id}}</span></p>
 				</div>
 			</div>
 		</div>
@@ -34,14 +34,14 @@
 			<div class="content">
 				<div class="header">
 					<img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-200px.png">
-					<h4>Oct 18, 2015   08:30:57   PDT</h4>
+					<h4>{{ details.update_time | date:'dd MMMM y HH:mm:ss' }}</h4>
 				</div>
 				<div class="main">
 					<h3>Deposit on wallet</h3>
-					<h5>Total: $20.00 USD</h5>
+					<h5>Total: ${{price.amount.value}} USD</h5>
 				</div>
-				<div class="message">
-					<p>Hello Ennio,<br>You sent a payment of $20.00 USD to EpicTrading (<a href="/controlPanel">paypal@epictrading.com</a>)</p>
+				<div class="message" *ngFor="let price of details.purchase_units">
+					<p>Hello {{ capitalizeFirstLetter(details.payer.name.given_name) }} {{ capitalizeFirstLetter(details.payer.name.surname) }},<br>You sent a payment of ${{price.amount.value}} USD to EpicTrading (<a href="/controlPanel">paypal@epictrading.com</a>)</p>
 					<h6>It may take a few moments for this<br>transaction to appear in your account.</h6>
 				</div>
 				<div class="footer">
