margin paypal confirm html

--- a/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
+++ b/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.html
@@ -6,8 +6,8 @@
 
 
 
-	<div class="container"  *ngFor="let price of details.purchase_units">
-		<div class="left">
+	<div class="container "  *ngFor="let price of details.purchase_units">
+		<div class="left d-lg-block d-none">
 			<div class="info-box">
 				<div class="receipt">
 					Receipt for <br><span>EpicTrading LTD.</span>
