--- a/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.scss
+++ b/Epic_Trading/src/app/components/confirm-paypal/confirm-paypal.component.scss
@@ -128,6 +128,23 @@ span {
 	margin-right: 40px;
 }
 
+
+@media (max-width: 390px) {
+  .content {
+    margin-top: 30px;
+    margin-left: 0px;
+    margin-right: 40px;
+  }
+}
+
+
+
+
+
+
+
+
+
 .header {
 	overflow: hidden;
 	border-bottom: 1px solid #d7e2e7;
