--- a/Epic_Trading/src/app/components/navbar/navbar.component.scss
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.scss
@@ -12,6 +12,12 @@
   color: transparent;
 }
 
+.bannercontrolpaneltext2 {
+  background: linear-gradient(60deg, rgba(0, 172, 193, 1) 0%, rgb(1, 142, 161) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
 
 
 
