--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <header class=" sticky-top">
   <nav class="navbar navbar-expand-lg navbar-light bannercontrolpanel">
     <div class="container-fluid ">
-      <a class="navbar-brand bannercontrolpaneltext " href="#"><img  class="pb-1 mx-1" src="https://img.icons8.com/material-outlined/24/combo-chart.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
+      <a class="navbar-brand bannercontrolpaneltext2 " href="#"><img  class="pb-1 mx-1" src="https://img.icons8.com/material-outlined/24/combo-chart.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
