--- a/Epic_Trading/src/app/auth/login/login.component.html
+++ b/Epic_Trading/src/app/auth/login/login.component.html
@@ -1,32 +1,3 @@
-<!-- <div class="jumbotron text-center">
-  <h1>Epic Energy Services</h1>
-
-  <p>Pannello di controllo gestione Clienti e Fatture</p>
-
-</div>
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-4">
-      <h2>Accesso</h2>
-      <form>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" name="email" required [(ngModel)]="email">
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="password" required [(ngModel)]="password">
-        </div>
-        <button (click)="login()" type="submit" class="btn btn-primary">Accedi</button>
-      </form>
-      <p class="mt-3">Non hai un account? <a href="/register">Registrati qui</a>.</p>
-    </div>
-  </div>
-</div> -->
-
-<!-- <div class=" container-fluid text-center mt-5 ">
-<a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 2em;">EPICTRADING</span></a>
-</div> -->
 <div class="bannercontrolpanel ">
 <div class="form-box mx-auto ">
 
@@ -47,4 +18,20 @@
     <p>Don't have an account? <a routerLink="/register" routerLinkActive="active">Sign up</a> </p>
   </div>
   </div>
+</div>
+
+
+<!-- PROFILE LINK -->
+
+<div class="about">
+  <a class="bg_links social mail" href="mailto:luca.quaglino@hotmail.com" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links social github" href="https://github.com/Lucaquaglino" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links social linkedin" href="https://www.linkedin.com/in/lucaquaglino/" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links logo"></a>
 </div>
