--- a/Epic_Trading/src/app/auth/login/login.component.scss
+++ b/Epic_Trading/src/app/auth/login/login.component.scss
@@ -99,3 +99,153 @@
   color:white;
   height: 100vh;
 }
+
+
+
+
+// PROFILE LINK
+// // test
+
+.about {
+  $cubic: cubic-bezier(0.64, 0.01, 0.07, 1.65);
+  $transition: 0.6s $cubic;
+  $size: 40px;
+  position: fixed;
+  z-index: 10;
+  bottom: 10px;
+  right: 10px;
+  width: $size;
+  height: $size;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  transition: all 0.2s ease;
+
+  .bg_links {
+     width: $size;
+     height: $size;
+     border-radius: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     background-color: rgba(#000000, 0.2);
+     border-radius: 100%;
+     backdrop-filter: blur(5px);
+     position: absolute;
+  }
+
+  .logo {
+     width: $size;
+     height: $size;
+     z-index: 9;
+     background-image: url(../../../assets/LQ.svg.svg);
+     background-size: 50%;
+     background-repeat: no-repeat;
+     background-position: 10px 10px;
+     opacity: 0.9;
+     transition: all 1s 0.2s ease;
+     bottom: 0;
+     right: 0;
+  }
+
+  .social {
+     opacity: 0;
+     right: 0;
+     bottom: 0;
+
+     .icon {
+        width: 100%;
+        height: 100%;
+        background-size: 20px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: transparent;
+        display: flex;
+        transition: all 0.2s ease, background-color 0.4s ease;
+        opacity: 0;
+        border-radius: 100%;
+     }
+
+     &.mail {
+        transition: all 0.8s ease;
+
+        .icon {
+           background-image: url(https://www.svgrepo.com/show/521736/mail.svg);
+        }
+     }
+
+     &.github {
+        transition: all 0.3s ease;
+        .icon {
+           background-image: url(https://www.svgrepo.com/show/512317/github-142.svg);
+        }
+     }
+
+     &.linkedin {
+        transition: all 0.8s ease;
+        .icon {
+           background-image: url(https://www.svgrepo.com/show/508852/linkedin.svg);
+        }
+     }
+  }
+
+  &:hover {
+     width: 105px;
+     height: 105px;
+     transition: all $transition;
+
+     .logo {
+        opacity: 1;
+        transition: all 0.6s ease;
+     }
+
+     .social {
+        opacity: 1;
+
+        .icon {
+           opacity: 0.9;
+        }
+
+        &:hover {
+           background-size: 28px;
+           .icon {
+              background-size: 65%;
+              opacity: 1;
+           }
+        }
+
+        &.mail {
+           right: 0;
+           bottom: calc(100% - 40px);
+           transition: all 0.3s 0s $cubic;
+           .icon {
+              &:hover {
+                 background-color: #698fb7;
+              }
+           }
+        }
+
+        &.github {
+           bottom: 45%;
+           right: 45%;
+           transition: all 0.3s 0.15s $cubic;
+           .icon {
+              &:hover {
+                 background-color: #ea4c89;
+              }
+           }
+        }
+
+        &.linkedin {
+           bottom: 0;
+           right: calc(100% - 40px);
+           transition: all 0.3s 0.25s $cubic;
+           .icon {
+              &:hover {
+                 background-color: #0077b5;
+              }
+           }
+        }
+     }
+  }
+}
