--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -361,3 +361,23 @@ of Simple CSS Waves-->
 
 
 </div>
+
+
+
+
+
+
+<!-- PROFILE LINK -->
+
+<div class="about">
+  <a class="bg_links social mail" href="mailto:luca.quaglino@hotmail.com" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links social github" href="https://github.com/Lucaquaglino" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links social linkedin" href="https://www.linkedin.com/in/lucaquaglino/" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links logo"></a>
+</div>
