--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -157,3 +157,15 @@
 <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalOk">
   Mostra modale
 </button> -->
+<div class="about">
+  <a class="bg_links social mail" href="mailto:luca.quaglino@hotmail.com" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links social github" href="https://github.com/Lucaquaglino" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links social linkedin" href="https://www.linkedin.com/in/lucaquaglino/" target="_blank">
+     <span class="icon"></span>
+  </a>
+  <a class="bg_links logo"></a>
+</div>
