--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -147,17 +147,14 @@ of Simple CSS Waves-->
   </svg>
   </div>
   <!--Waves end-->
-
   </div>
   <!--Header ends-->
 
   <!--Content starts-->
+  <!-- DONT DELETE -->
   <div class="content flex">
-
   </div>
   <!--Content ends-->
-
-
 
 <!-- Features Section -->
 <section id="features" class="py-5">
@@ -176,7 +173,6 @@ of Simple CSS Waves-->
     </div>
   </div>
 </section>
-
 
 <!-- Features Section -->
 <section id="feature" class="py-5">
@@ -218,8 +214,6 @@ of Simple CSS Waves-->
   </div>
 </section>
 
-
-
 <hr class="" style="color: grey;">
 
 <!-- card section -->
@@ -235,9 +229,6 @@ of Simple CSS Waves-->
             <h5 class="card-title  bannercontrolpaneltext">Educational Resources</h5>
             <p class="card-text">
               We believe in the power of knowledge. EpicTrading offers a wealth of educational resources, including webinars, tutorials, and market insights. Whether you're a beginner or a seasoned trader, our educational materials will help you sharpen your skills and make informed decisions.</p>
-
-
-
           </div>
         </div>
       </div>
@@ -265,11 +256,6 @@ of Simple CSS Waves-->
   </div>
 </section>
 
-
-
-
-
-
 <section id="pricing" class="bannercontrolpanel py-5 mb-5">
   <div class="container">
     <div class="row justify-content-center">
@@ -286,12 +272,8 @@ of Simple CSS Waves-->
         <p class=" text-white">Verified users</p>
       </div>
     </div>
-    <!-- Aggiungi il tuo contenuto per i prezzi qui -->
   </div>
 </section>
-
-
-
 <!-- card section -->
 <section id="features" class="py-5 mb-5">
   <div class="container text-center">
@@ -321,31 +303,22 @@ of Simple CSS Waves-->
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </section>
-
-
-
 <!-- banner -->
 <hr class=" m-0 p-0" style="color: grey;">
 <section id="pricing" class="bg-light py-5 ">
-
   <div class="container">
     <h2 class="text-center">Join EpicTrading today and unlock your full trading potential. Experience the future of trading with a platform that is built on innovation, reliability, and a commitment to your success. Start your trading journey with us and embark on a path to financial greatness.</h2>
-
-    <!-- Aggiunta del pulsante -->
     <div class="text-center mt-4">
       <button class="btn shadow__btn border-0 btn-lg" (click)="redirectToRegister()">Get Started</button>
     </div>
   </div>
-
 </section>
-
 <hr class=" m-0 p-0" style="color: grey;">
 <div class="m-5"></div>
-<!-- Contact Section -->
+<!-- Contact Section FOOTER -->
 <section id="contact" class=" bannercontrolpanel py-5 ">
   <div class="container">
       <h2 class="text-center text-white">Contact</h2>
@@ -354,18 +327,7 @@ of Simple CSS Waves-->
       </div>
   </div>
 </section>
-
-
-
-
-
-
 </div>
-
-
-
-
-
 
 <!-- PROFILE LINK -->
 
