--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.scss
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.scss
@@ -11818,3 +11818,17 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+
+
+
+
+
+
+// stock selected to SELL
+
+.selected-action {
+
+  font-weight: bold;
+
+}
