--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -52,8 +52,8 @@
         </div>
         <div  class="navbar-nav "   style=" margin-left:auto;">
         <!-- Aggiungi i bottoni "Login" e "Register" anche qui -->
-        <button class="btn btn-light btn-sm ml-2">Login</button>
-        <button class="btn bannercontrolpanel btn-sm ml-2 border-0">Register</button>
+        <button class="btn btn-light btn-sm ml-2" routerLink="/login">Login</button>
+        <button class="btn bannercontrolpanel btn-sm ml-2 border-0" routerLink="/register">Register</button>
          </div>
        </div>
     </div>
